src/k8s/prob-svc-np.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prob
  name: prob
spec:
  selector:
    app: prob
  type: NodePort
  ports:
    - name: prob-port
      port: 80
      protocol: TCP
      targetPort: 80
