src/k8s/prob-ing-instance.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prob-ing-instance
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: prob-ingress
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/subnets: subnet-0307d33add764a362,subnet-0c7b31cabaf40f3cd,subnet-0de0078244b70c4ee
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prob
                port:
                  number: 80
